@@ -961,5 +961,8 @@ cbpBinTrashRollingBlackEmpty,blocks,block,,,Rolling Trash Bin Empty,,
 cbpBinTrashRollingPinkEmpty,blocks,block,,,Rolling Trash Bin Empty,,
 cbpBinTrashRollingRandomHelper,blocks,block,,,Rolling Trash Bin Random Helper,,
 cbpPoleSquareTipCentered,shapes,Block,,,Pole Tip Centered,,
+cbpBookShelfDubTopFull01_Poof,shapes,Block,,,Bookcase,,
+cbpBookShelfDubBotFull01_Poof,shapes,Block,,,Bookcase,,
+cbpBowlingBall_Corner,shapes,Block,,,Bowling Ball corner,,
 loadingCustomBlocksPack,UI,Loading Screen,x,,The Custom Block Pack contains XML definitions for custom blocks used by multiple POI developers.,,,,,,,,,,,,,
 loadingCustomBlocksPack_title,UI,Loading Screen,x,,Custom Block Pack,,,,,,,, 
